# crossref-academic-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: server.py
src/clients/: crossref.py
src/tools/: academic.py
